tests/build/cases/widget/module_path_malformed1.stderr
error: unexpected end of input, expected identifier
 --> $DIR/module_path_malformed1.rs:3:16
  |
3 | #[widget($crate::)]
  |                ^^
